plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'graduate'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//	runtimeOnly 'com.mysql:mysql-connector-j'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//S3
	implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1")
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

	//Pinecone
	implementation 'io.pinecone:pinecone-client:5.0.0'
	//Pinecone 클라이언트가 의존하는 라이브러리의 특정 버전에 취약점이 있어 해당 라이브러리 버전업
	implementation 'com.google.protobuf:protobuf-java:4.31.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
